# file-size-splitter

./: LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
.windsurf/: rules
src/file_size_splitter/: __init__.py  cli.py  splitter.py
tests/: test_splitter.py
