[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-size-splitter"
version = "0.1.0"
description = "ファイルを指定されたサイズで分割し、分割したファイルを復元するツール"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name"}
]
keywords = ["file", "split", "restore", "batch", "powershell"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]

[project.scripts]
file-size-splitter = "file_size_splitter.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/file-size-splitter"
Repository = "https://github.com/yourusername/file-size-splitter"
Issues = "https://github.com/yourusername/file-size-splitter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
file_size_splitter = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
